--- a/style.css
+++ b/style.css
@@ -1,5 +1,32 @@
+.cabecalho {
+    background-color: #424E61;
+    color: white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 24px 0;
+}
 
-header {
-    background-color: #05b3aa;
-    color: rgb(182, 201, 198);
+.cabecalho-imagem{
+    width: 20%;
+}
+.cabecalho {
+    background-color: #424E61;
+    color: white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 24px 0;
+}
+.cabecalho-lista-item{
+    display: inline-block;
+    margin: 0 16px;
+    font-size: 24px;
+}
+*{
+    margin: 0;
+    padding: 0;
+}
+.escola-imagem{
+    width: 25%;
 }
